// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script>
  function m() {
        obj = <% %>
    return obj + <% %>
  }

  m(  <% %>)
  ("<% %>")
</script>

<script>
  console.log("<% %>", {
    opts: {},
  })
</script>

=====================================output=====================================
<script>
  function m() {
    obj = <% %>;
    return obj + <% %>;
  }

  m(<% %>)("<% %>");
</script>

<script>
  console.log("<% %>", {
    opts: {},
  });
</script>

================================================================================
`;

exports[`script_json.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script type="application/ld+json">
{
  "json": "<% %>",
  "d": <% %>,
}
</script>

=====================================output=====================================
<script type="application/ld+json">
  {
    "json": "<% %>",
    "d": <% %>
  }
</script>

================================================================================
`;

exports[`script_src.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script src="<% %>"></script>
<script src="link<% %>?param"></script>

=====================================output=====================================
<script src="<% %>"></script>
<script src="link<% %>?param"></script>

================================================================================
`;
